Upgrade to Gradle 5.4
Declare plugin-publish at end because of https://github.com/gradle/gradle/issues/8213

Replace nebula-test with Gradle TestKit because nebula-test is not compatible with Groovy 2.5
https://docs.gradle.org/current/userguide/test_kit.html
https://docs.gradle.org/current/userguide/test_kit.html#sub:test-kit-automatic-classpath-injection